--- a/upload.html
+++ b/upload.html
@@ -9,8 +9,14 @@
 </head>
 <body>
     <nav>
-        <iconify-icon icon="charm:menu-hamburger"></iconify-icon>
-        <img src="" alt="">
+        <a><div id="hamburger">
+         <iconify-icon icon="radix-icons:hamburger-menu" id="hamburger_menu"></iconify-icon>
+        </div></a>
     </nav>
+    <div id="sidebar">
+        <a href="">Language Settings</a>
+        <a href="">Account Settings</a>
+    </div>
+    <script src="https://code.iconify.design/iconify-icon/1.0.0/iconify-icon.min.js"></script>
 </body>
 </html>
