--- a/upload.html
+++ b/upload.html
@@ -14,8 +14,11 @@
         </div></a>
     </nav>
     <div id="sidebar">
-        <a href="">Language Settings</a>
-        <a href="">Account Settings</a>
+        <a><div id="cross">
+            <iconify-icon icon="akar-icons:cross"></iconify-icon>
+        </div></a>
+        <div class="settings"><a href="">Language Settings</a></div>
+        <div class="settings"><a href="">Account Settings</a></div>
     </div>
     <script src="https://code.iconify.design/iconify-icon/1.0.0/iconify-icon.min.js"></script>
 </body>
