--- a/upload.html
+++ b/upload.html
@@ -1,25 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="upload.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="upload.css" />
     <title>Document</title>
-</head>
-<body>
+  </head>
+  <body>
     <nav>
-        <a><div id="hamburger">
-         <iconify-icon icon="radix-icons:hamburger-menu" id="hamburger_menu"></iconify-icon>
-        </div></a>
+      <a
+        ><div id="hamburger" onclick="openNav()">
+          <iconify-icon
+            icon="radix-icons:hamburger-menu"
+            id="hamburger_menu"
+          ></iconify-icon></div
+      ></a>
     </nav>
-    <div id="sidebar">
-        <a><div id="cross">
-            <iconify-icon icon="akar-icons:cross"></iconify-icon>
-        </div></a>
-        <div class="settings"><a href="">Language Settings</a></div>
-        <div class="settings"><a href="">Account Settings</a></div>
+    <div id="sidebar" class="mySidebar">
+      <div id="crossicon"><a href="javascript:void(0)" id="cross" onclick="closeNav()"></a></div>
+      <br /><br />
+      <div class="settings">
+        <a href="#">Language Settings</a>
+        <a href="#">Account Settings</a>
+      </div>
     </div>
+
     <script src="https://code.iconify.design/iconify-icon/1.0.0/iconify-icon.min.js"></script>
-</body>
+    <script src="upload.js"></script>
+  </body>
 </html>
