--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <img src="images/file-transfer-concept-backup-data-technology-cloud-upload-download_199064-156-removebg-preview.png" alt="" id="illustration">
   <p>Share over thousands of files among all over your devices</p>
   <form action="">
-    <a href="signup.html"><input type="button" value="Get Started" id="form_btn"></a>
+    <a href="upload.html"><input type="button" value="Get Started" id="form_btn"></a>
   </form>
 </body>
 </html>
