--- a/upload.html
+++ b/upload.html
@@ -25,6 +25,7 @@
         <a href="#">Account Settings</a>
       </div>
     </div>
+    <img src="images/file-transfer-concept-backup-data-technology-cloud-upload-download_199064-156-removebg-preview.png" alt="">
 
     <script src="https://code.iconify.design/iconify-icon/1.0.0/iconify-icon.min.js"></script>
     <script src="upload.js"></script>
