--- a/upload.html
+++ b/upload.html
@@ -9,8 +9,7 @@
   </head>
   <body>
     <nav>
-      <a
-        ><div id="hamburger" onclick="openNav()">
+      <a><div id="hamburger" onclick="openNav()">
           <iconify-icon
             icon="radix-icons:hamburger-menu"
             id="hamburger_menu"
@@ -25,7 +24,7 @@
         <a href="#">Account Settings</a>
       </div>
     </div>
-    <img src="images/file-transfer-concept-backup-data-technology-cloud-upload-download_199064-156-removebg-preview.png" alt="">
+    <img src="images/file-transfer-concept-backup-data-technology-cloud-upload-download_199064-156-removebg-preview.png" alt="" id="file_transfer">
 
     <script src="https://code.iconify.design/iconify-icon/1.0.0/iconify-icon.min.js"></script>
     <script src="upload.js"></script>
