dropbox creation started

--- a/upload.html
+++ b/upload.html
@@ -25,7 +25,11 @@
       </div>
     </div>
     <img src="images/file-transfer-concept-backup-data-technology-cloud-upload-download_199064-156-removebg-preview.png" alt="" id="file_transfer">
-
+    
+    <div id="dropbox">
+      <iconify-icon icon="akar-icons:circle-plus" style="color:#18a292;"width="130"height="130;" id="plus"></iconify-icon>
+      <p id="Droptext">Drop files here</p>
+    </div>
     <script src="https://code.iconify.design/iconify-icon/1.0.0/iconify-icon.min.js"></script>
     <script src="upload.js"></script>
   </body>
