--- a/upload.html
+++ b/upload.html
@@ -13,8 +13,7 @@
           <iconify-icon
             icon="radix-icons:hamburger-menu"
             id="hamburger_menu"
-          ></iconify-icon></div
-      ></a>
+          ></iconify-icon></div></a>
     </nav>
     <div id="sidebar" class="mySidebar">
       <div id="crossicon"><a href="javascript:void(0)" id="cross" onclick="closeNav()"></a></div>
