media query on first page

--- a/index.html
+++ b/index.html
@@ -12,7 +12,8 @@
      <title>Document</title>
 </head>
 <body>
-  <img src="images/file-transfer-concept-backup-data-technology-cloud-upload-download_199064-156-removebg-preview.png" alt="" id="illustration">
+  <div id="image">
+  <img src="images/file-transfer-concept-backup-data-technology-cloud-upload-download_199064-156-removebg-preview.png" alt="" id="illustration"></div>
   <p>Share over thousands of files among all over your devices</p>
   <form action="">
     <a href="upload.html"><input type="button" value="Get Started" id="form_btn"></a>
