--- a/upload.html
+++ b/upload.html
@@ -29,8 +29,14 @@
       <input type="file" name="InputFile" id="fileInput">
       <iconify-icon icon="akar-icons:circle-plus" style="color:#18a292;"width="130"height="130;" id="plus"></iconify-icon>
       <p id="Droptext">Drop files here</p>
-    </div>
+    </div> 
+    <form action="" method="post">
+      <input id="fileinput" type="file" hidden>
+      <input type="button" value="Upload File" onclick="upload()">
+      <input type="submit" id="submitfile" hidden>
+    </form>
     <script src="https://code.iconify.design/iconify-icon/1.0.0/iconify-icon.min.js"></script>
     <script src="upload.js"></script>
   </body>
+  
 </html>
