--- a/upload.html
+++ b/upload.html
@@ -32,7 +32,7 @@
     </div> 
     <form action="" method="post">
       <input id="fileinput" type="file" hidden>
-      <input type="button" value="Upload File" onclick="upload()">
+      <input type="button" value="Upload File" onclick="upload()" id="button">
       <input type="submit" id="submitfile" hidden>
     </form>
     <script src="https://code.iconify.design/iconify-icon/1.0.0/iconify-icon.min.js"></script>
