--- a/upload.html
+++ b/upload.html
@@ -30,7 +30,7 @@
       <iconify-icon icon="akar-icons:circle-plus" style="color:#18a292;"width="130"height="130;" id="plus"></iconify-icon>
       <p id="Droptext">Drop files here</p>
     </div> 
-    <form action="" method="post">
+    <form action="" method="post" id="form">
       <input id="fileinput" type="file" hidden>
       <input type="button" value="Upload File" onclick="upload()" id="button">
       <input type="submit" id="submitfile" hidden>
