--- a/upload.html
+++ b/upload.html
@@ -9,7 +9,7 @@
     <title>Document</title>
     
   </head>
-  <body>
+  <body id="body">
     <nav>
       <a><div id="hamburger" onclick="openNav()">
           <iconify-icon
@@ -37,6 +37,7 @@
       <input type="button" value="Upload File" onclick="upload()" id="button">
       <input type="submit" id="submitfile" hidden>
     </form>
+    <div id="message"></div>
     <script src="https://code.iconify.design/iconify-icon/1.0.0/iconify-icon.min.js"></script>
     <script src="upload.js"></script>
   </body>
