--- a/upload.html
+++ b/upload.html
@@ -34,7 +34,7 @@
     </div> 
     <form action="" method="post" id="form">
       <input id="fileinput" type="file" hidden>
-      <input type="button" value="Upload File" onclick="upload()" id="button">
+      <input type="button" value="Upload File" id="button">
       <input type="submit" id="submitfile" hidden>
     </form>
     <div id="message"></div>
