--- a/index.html
+++ b/index.html
@@ -15,9 +15,9 @@
   <div id="image">
   <img src="images/file-transfer-concept-backup-data-technology-cloud-upload-download_199064-156-removebg-preview.png" alt="" id="illustration"></div>
   <p>Share over thousands of files among all over your devices</p>
-  <form action="">
-    <a href="upload.html"><input type="button" value="Get Started" id="form_btn"></a>
-  </form>
+   <form id = "upload "action="">
+    <a href="upload.html"><input type="button" value="Get Started" id="form_btn"></a> 
+  </form> 
   
 </body>
 </html>
