render download link from one file to another

--- a/upload.html
+++ b/upload.html
@@ -30,7 +30,7 @@
         <a href="#">Account Settings</a>
       </div>
     </div>
-<!-- <<<<<<< HEAD -->
+<!-- <<<<<<< HEAD
     <div class="main-div">
       <div id="file_transfer">
         <img
@@ -65,8 +65,8 @@
           </form>
         </div>
       </div>
-    </div>
-<!-- =======
+    </div> -->
+<!-- ======= -->
     <img src="images/file-transfer-concept-backup-data-technology-cloud-upload-download_199064-156-removebg-preview.png" alt="" id="file_transfer">
     
     <div id="dropbox">
@@ -79,7 +79,7 @@
       <input type="button" value="Upload File" id="button">
       <input type="submit" id="submitfile" hidden>
     </form>
-    <div id="message"></div> -->
+    <div id="message"></div>
 <!-- >>>>>>> c00d724abb3d115c8300e5de2ddae349405ecb33 -->
     <script src="https://code.iconify.design/iconify-icon/1.0.0/iconify-icon.min.js"></script>
     <script src="upload.js"></script>
