--- a/upload.html
+++ b/upload.html
@@ -70,7 +70,7 @@
     <img src="images/file-transfer-concept-backup-data-technology-cloud-upload-download_199064-156-removebg-preview.png" alt="" id="file_transfer">
     
     <form id="dropbox" method="POST" enctype="multipart/form-data">
-      <input type="file" name="InputFile" id="fileInput">
+      <input type="file" name="myfile" id="fileInput">
       <iconify-icon icon="akar-icons:circle-plus" style="color:#18a292;"width="130"height="130;" id="plus"></iconify-icon>
       <p id="Droptext">Drop files here</p>
     </form> 
