--- a/upload.html
+++ b/upload.html
@@ -69,12 +69,12 @@
 <!-- ======= -->
     <img src="images/file-transfer-concept-backup-data-technology-cloud-upload-download_199064-156-removebg-preview.png" alt="" id="file_transfer">
     
-    <form id="dropbox" method="POST" enctype="multipart/form-data">
+    <form id="dropbox" name="Form" method="POST" enctype="multipart/form-data">
       <input type="file" name="myfile" id="fileInput">
       <iconify-icon icon="akar-icons:circle-plus" style="color:#18a292;"width="130"height="130;" id="plus"></iconify-icon>
       <p id="Droptext">Drop files here</p>
     </form> 
-    <form method="POST" id="form"  enctype="multipart/form-data">
+    <form method="POST" id="form"  enctype="application/x-www-form-urlencoded">
       <input id="fileinput" type="file" hidden>
       <input type="button" value="Upload File" id="button">
       <input type="submit" id="submitfile" hidden>
