--- a/upload.html
+++ b/upload.html
@@ -13,8 +13,7 @@
   </head>
   <body id="body">
     <nav>
-      <a
-        ><div id="hamburger" onclick="openNav()">
+      <a><div id="hamburger" onclick="openNav()">
           <iconify-icon
             icon="radix-icons:hamburger-menu"
             id="hamburger_menu"></iconify-icon></div
