--- a/upload.html
+++ b/upload.html
@@ -78,7 +78,9 @@
       <input type="button" value="Upload File" id="button">
       <input type="submit" id="submitfile" hidden>
     </form>
-    <div id="message"></div>
+    <form id="formid">
+      <input type="text" name="download" id="download">
+    </form>
 <!-- >>>>>>> c00d724abb3d115c8300e5de2ddae349405ecb33 -->
     <script src="https://code.iconify.design/iconify-icon/1.0.0/iconify-icon.min.js"></script>
     <script src="upload.js"></script>
